--- a/Section_4/alpha-blog/app/views/articles/index.html.erb
+++ b/Section_4/alpha-blog/app/views/articles/index.html.erb
@@ -4,17 +4,21 @@
     <tr>
       <th>Title</th>
       <th>Description</th>
-      <th>Actions</th>
+      <th colspan="3">Actions</th>
     </tr>
   </thead>
   <tbody>
     <% @articles.each do |article| %>
-    <tr>
-      <td><%= article.title %></td>
-      <td><%= article.description %></td>
-      <td><%= link_to 'Show', article_path(article) %></td>
-      <td><%= link_to 'Delete', article_path(article), method: :delete %></td>
-    </tr>
+      <tr>
+        <td><%= article.title %></td>
+        <td><%= article.description %></td>
+        <td><%= link_to 'Show', article_path(article) %></td>
+        <td><%= link_to 'Edit', edit_article_path(article) %></td>
+        <td><%= link_to 'Delete', article_path(article), method: :delete, data: { confirm: 'Are you sure?', "turbo-method": :delete } %></td>
+      </tr>
     <% end %>
   </tbody>
 </table>
+<p>
+  <%= link_to 'Create new article', new_article_path%>
+</p>
