--- a/Section_5/alpha-blog/app/views/articles/welcome.html.erb
+++ b/Section_5/alpha-blog/app/views/articles/welcome.html.erb
@@ -1,4 +1,17 @@
-<h1>Welcome</h1>
-
-<%= link_to 'Articles listing', articles_path%> |
-<%= link_to 'Create new article', new_article_path%>
+<div id="page-content">
+  <div class="container" id="home-container">
+    <div class="p-5 mb-4 bg-light rounded-3 text-center text-white mt-5" id="jumbotron">
+      <div class="container-fluid py-5">
+        <h1 class="display-5">Alpha-blog</h1>
+        <p class="col-md-12 fs-4">
+          Using a series of utilities, you can create this jumbotron, just
+          like the one in previous versions of Bootstrap. Check out the
+          examples below for how you can remix and restyle it to your liking.
+        </p>
+        <button class="btn btn-success btn-lg" type="button">
+          Example button
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
