--- a/Section_5/alpha-blog/app/views/layouts/_navbar.html.erb
+++ b/Section_5/alpha-blog/app/views/layouts/_navbar.html.erb
@@ -1,7 +1,6 @@
-<% # hello %>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <%= link_to "Alpha blog", root_path, class: "navbar-brand", id: "logo" %>
     <button
       class="navbar-toggler"
       type="button"
@@ -16,7 +15,8 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <!-- <a class="nav-link active" aria-current="page" href="#">Articles</a> -->
+          <%= link_to "Articles", articles_path, class: "nav-link active" %>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
