--- a/Section_5/alpha-blog/app/views/layouts/application.html.erb
+++ b/Section_5/alpha-blog/app/views/layouts/application.html.erb
@@ -14,10 +14,11 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
-  <body>
+  <body class="d-flex flex-column">
     <%= render "layouts/navbar" %>
     <%= render "layouts/messages" %>
     <%= yield %>
+    <%= render "layouts/footer" %>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
