Add style for index, create and new

--- a/Section_5/alpha-blog/app/views/layouts/application.html.erb
+++ b/Section_5/alpha-blog/app/views/layouts/application.html.erb
@@ -17,7 +17,11 @@
   <body class="d-flex flex-column">
     <%= render "layouts/navbar" %>
     <%= render "layouts/messages" %>
-    <%= yield %>
+    <div id="page-content">
+      <div class="container" id="home-container">
+        <%= yield %>
+      </div>
+    </div>
     <%= render "layouts/footer" %>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
