--- a/Section_5/alpha-blog/app/assets/stylesheets/custom.css
+++ b/Section_5/alpha-blog/app/assets/stylesheets/custom.css
@@ -30,8 +30,27 @@ body {
 
 #page-content {
   flex: 1 0 auto;
+  background-color: lightgray;
 }
 
 #sticky-footer {
   flex-shrink: none;
+}
+
+.card-header {
+  font-style: italic;
+}
+
+.card-title {
+  text-decoration: none;
+  color: green;
+}
+
+.card-title:hover {
+  text-decoration: underline;
+  color: green;
+}
+
+.form-class {
+  background-color: #33ABB5;
 }
