--- a/Section_5/alpha-blog/app/views/articles/_form.html.erb
+++ b/Section_5/alpha-blog/app/views/articles/_form.html.erb
@@ -7,16 +7,28 @@
     <% end %>
   </ul>
 <% end %>
-<%= form_with(model: @article, local: true) do |f| %>
-  <p>
-    <%= f.label :title %><br/>
-    <%= f.text_field :title %>
-  </p>
-  <p>
-    <%= f.label :description %><br/>
-    <%= f.text_area :description %>
-  </p>
-  <p>
-    <%= f.submit %>
-  </p>
+<%= form_with(model: @article, local: true, class: "form-class p-4") do |f| %>
+  <div class="mb-3">
+    <div class="row">
+      <div class="col-2">
+        <%= f.label :title, class: "form-label text-white" , for: "exampleFormControlInput1"%>
+      </div>
+      <div class="col-10">
+        <%= f.text_field :title, class: "form-control", id: "exampleFormControlInput1", placeholder: "My title" %>
+      </div>
+    </div>
+  </div>
+  <div class="mb-3">
+    <div class="row">
+      <div class="col-2">
+        <%= f.label :description, class: "form-label text-white" , for: "exampleFormControlInput1"%>
+      </div>
+      <div class="col-10">
+        <%= f.text_area :description, class: "form-control", id: "exampleFormControlTextarea1", rows: 10 %>
+      </div>
+    </div>
+  </div>
+  <div class="mb-3 text-center">
+    <%= f.submit 'Create article', class: "btn btn-outline-light" %>
+  </div>
 <% end %>
