--- a/Section_5/alpha-blog/app/views/articles/index.html.erb
+++ b/Section_5/alpha-blog/app/views/articles/index.html.erb
@@ -1,24 +1,22 @@
-<h1>Index</h1>
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th colspan="3">Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @articles.each do |article| %>
-      <tr>
-        <td><%= article.title %></td>
-        <td><%= article.description %></td>
-        <td><%= link_to 'Show', article_path(article) %></td>
-        <td><%= link_to 'Edit', edit_article_path(article) %></td>
-        <td><%= link_to 'Delete', article_path(article), method: :delete, data: { confirm: 'Are you sure?', "turbo-method": :delete } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-<p>
-  <%= link_to 'Create new article', new_article_path%>
+<h1 class="text-center mt-4">Listing all articles</h1>
+<% @articles.each do |article| %>
+  <div class="card text-center mb-4 mx-5">
+    <div class="card-header">
+      Featured
+    </div>
+    <div class="card-body">
+      <!-- <h5 class="card-title"><%= article.title %></h5> -->
+      <h5><%= link_to article.title, article_path(article), class: "card-title" %></h5>
+      <p class="card-text"><%= article.description %></p>
+      <%= link_to 'View', article_path(article), class: "btn btn-outline-success" %>
+      <%= link_to 'Edit', edit_article_path(article), class: "btn btn-outline-info" %>
+      <%= link_to 'Delete', article_path(article), method: :delete, data: { confirm: 'Are you sure?', "turbo-method": :delete }, class: "btn btn-outline-danger" %>
+    </div>
+    <div class="card-footer text-muted">
+      2 days ago
+    </div>
+  </div>
+<% end %>
+<p class="text-center">
+  <%= link_to 'Create new article', new_article_path, class: "btn btn-primary"%>
 </p>
