--- a/Section_5/alpha-blog/app/views/articles/_form.html.erb
+++ b/Section_5/alpha-blog/app/views/articles/_form.html.erb
@@ -29,6 +29,6 @@
     </div>
   </div>
   <div class="mb-3 text-center">
-    <%= f.submit 'Create article', class: "btn btn-outline-light" %>
+    <%= f.submit class: "btn btn-outline-light" %>
   </div>
 <% end %>
