--- a/Section_5/alpha-blog/app/views/articles/new.html.erb
+++ b/Section_5/alpha-blog/app/views/articles/new.html.erb
@@ -1,7 +1,3 @@
 <h1 class="text-center mt-4">Create new article</h1>
 <%= render 'form' %>
-<div class="row">
-  <div class="col-12 text-center mt-2">
-    <%= link_to '[Return to articles listing]', articles_path %>
-  </div>
-</div>
+<%= render 'return' %>
