--- a/Section_5/alpha-blog/app/views/layouts/_messages.html.erb
+++ b/Section_5/alpha-blog/app/views/layouts/_messages.html.erb
@@ -1,3 +1,5 @@
   <% flash.each do |name, msg| %>
+  <div class="alert alert-primary" role="alert">
     <%= msg %>
-  <% end %>
+  </div>
+<% end %>
