--- a/Section_5/alpha-blog/app/views/layouts/_navbar.html.erb
+++ b/Section_5/alpha-blog/app/views/layouts/_navbar.html.erb
@@ -15,10 +15,6 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <!-- <a class="nav-link active" aria-current="page" href="#">Articles</a> -->
-          <%= link_to "Articles", articles_path, class: "nav-link active" %>
-        </li>
-        <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
         </li>
         <li class="nav-item dropdown">
@@ -30,11 +26,11 @@
             data-bs-toggle="dropdown"
             aria-expanded="false"
           >
-            Dropdown
+            Options
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><%= link_to 'Create new article', new_article_path, class: 'dropdown-item'%></li>
+            <li><%= link_to 'View articles', articles_path, class: 'dropdown-item'%></li>
             <li><hr class="dropdown-divider" /></li>
             <li>
               <a class="dropdown-item" href="#">Something else here</a>
