Fix bugs for alerts, users and add styles

--- a/Section_6/alpha-blog/app/views/articles/_form.html.erb
+++ b/Section_6/alpha-blog/app/views/articles/_form.html.erb
@@ -1,11 +1,13 @@
 <% # debugger %>
 <% if @article.errors.any? %>
-  <h2>The following errors prevented the article from being saved</h2>
-  <ul>
-    <% @article.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-  </ul>
+  <div class="alert alert-danger" role="alert">
+    <h2>The following errors prevented the article from being saved</h2>
+    <ul>
+      <% @article.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+    </ul>
+  </div>
 <% end %>
 <%= form_with(model: @article, local: true, class: "form-class p-4") do |f| %>
   <div class="mb-3">
