--- a/Section_6/alpha-blog/app/views/articles/index.html.erb
+++ b/Section_6/alpha-blog/app/views/articles/index.html.erb
@@ -5,7 +5,7 @@
 <% @articles.each do |article| %>
   <div class="card text-center mb-4 mx-5">
     <div class="card-header">
-      Featured
+      Author: <%= article.user_id %>
     </div>
     <div class="card-body">
       <!-- <h5 class="card-title"><%= article.title %></h5> -->
@@ -13,7 +13,7 @@
       <p class="card-text"><%= article.description %></p>
       <%= link_to 'View', article_path(article), class: "btn btn-outline-success" %>
       <%= link_to 'Edit', edit_article_path(article), class: "btn btn-outline-info" %>
-      <%= link_to 'Delete', article_path(article), method: :delete, data: { confirm: 'Are you sure?', "turbo-method": :delete }, class: "btn btn-outline-danger" %>
+      <%= link_to 'Delete', article_path(article), method: :delete, data: { turbo_confirm: 'Are you sure?', "turbo-method": :delete }, class: "btn btn-outline-danger" %>
     </div>
     <div class="card-footer text-muted">
       2 days ago
