--- a/Section_6/alpha-blog/app/views/layouts/_messages.html.erb
+++ b/Section_6/alpha-blog/app/views/layouts/_messages.html.erb
@@ -1,5 +1,5 @@
   <% flash.each do |name, msg| %>
-  <div class="alert alert-primary" role="alert">
+  <div class="alert alert-<%= name %>" role="alert">
     <%= msg %>
   </div>
 <% end %>
