--- a/Section_6/alpha-blog/app/views/articles/welcome.html.erb
+++ b/Section_6/alpha-blog/app/views/articles/welcome.html.erb
@@ -6,8 +6,6 @@
       like the one in previous versions of Bootstrap. Check out the
       examples below for how you can remix and restyle it to your liking.
     </p>
-    <button class="btn btn-success btn-lg" type="button">
-      Example button
-    </button>
+    <%= link_to "Sign up!", signup_path, class: 'btn btn-success btn-lg' %>
   </div>
 </div>
