--- a/Section_6/alpha-blog/app/views/articles/show.html.erb
+++ b/Section_6/alpha-blog/app/views/articles/show.html.erb
@@ -1,10 +1,10 @@
-<h1>Show articles details</h1>
+<h1 class="text-center my-4">Author: <%= @article.user.username %></h1>
 <div class="card text-center mb-4 mx-5">
   <div class="card-header">
-    Author: <%= @article.user.username %>
+  <%= link_to gravatar_for(@article.user), @article.user %>
   </div>
   <div class="card-body">
-    <h5><%= link_to @article.title, article_path(@article), class: "card-title" %></h5>
+    <h5 class="card-title"><%= @article.title %></h5>
     <p class="card-text"><%= @article.description %></p>
     <%= link_to 'Edit', edit_article_path(@article), class: "btn btn-outline-info" %>
     <%= link_to 'Delete', article_path(@article), method: :delete, data: { confirm: 'Are you sure?', "turbo-method": :delete }, class: "btn btn-outline-danger" %>
