--- a/Section_6/alpha-blog/app/views/users/show.html.erb
+++ b/Section_6/alpha-blog/app/views/users/show.html.erb
@@ -1,5 +1,6 @@
 <h1 class="text-center my-4"><%= @user.username %>'s profile</h1>
-
 <%= gravatar_for @user, size: 200 %>
-
+<div class="text-center mt-4">
+  <%= link_to "Edit your profile", edit_user_path(@user), class: "btn btn-outline-info"%>
+</div>
 <%= render 'articles/articles' %>
