--- a/Section_6/alpha-blog/app/views/articles/_articles.html.erb
+++ b/Section_6/alpha-blog/app/views/articles/_articles.html.erb
@@ -1,3 +1,6 @@
+<div class="flickr_pagination">
+  <%= will_paginate @articles, :container => false %>
+</div>
 <% @articles.each do |article| %>
   <div class="card text-center my-4 mx-5">
     <div class="card-header">
@@ -16,3 +19,6 @@
     </div>
   </div>
 <% end %>
+<div class="flickr_pagination mb-4">
+  <%= will_paginate @articles, :container => false %>
+</div>
