--- a/Section_6/alpha-blog/app/views/users/_users.html.erb
+++ b/Section_6/alpha-blog/app/views/users/_users.html.erb
@@ -1,3 +1,6 @@
+<div class="flickr_pagination">
+  <%= will_paginate @articles, :container => false %>
+</div>
 <% @users.each do |user| %>
   <div class="card text-center my-4 mx-5">
     <div class="card-header">
@@ -14,3 +17,6 @@
     </div>
   </div>
 <% end %>
+<div class="flickr_pagination">
+  <%= will_paginate @articles, :container => false %>
+</div>
