Add user and session configuration

--- a/Section_6/alpha-blog/app/views/articles/_articles.html.erb
+++ b/Section_6/alpha-blog/app/views/articles/_articles.html.erb
@@ -1,4 +1,4 @@
-<div class="flickr_pagination">
+<div class="flickr_pagination mt-4">
   <%= will_paginate @articles, :container => false %>
 </div>
 <% @articles.each do |article| %>
