--- a/Section_6/alpha-blog/app/views/articles/_articles.html.erb
+++ b/Section_6/alpha-blog/app/views/articles/_articles.html.erb
@@ -11,8 +11,10 @@
       <h5><%= link_to article.title, article_path(article), class: "card-title" %></h5>
       <p class="card-text"><%= article.description %></p>
       <%= link_to 'View', article_path(article), class: "btn btn-outline-success" %>
-      <%= link_to 'Edit', edit_article_path(article), class: "btn btn-outline-info" %>
-      <%= link_to 'Delete', article_path(article), method: :delete, data: { turbo_confirm: 'Are you sure?', "turbo-method": :delete }, class: "btn btn-outline-danger" %>
+      <% if logged_in? && article.user == current_user %>
+        <%= link_to 'Edit', edit_article_path(article), class: "btn btn-outline-info" %>
+        <%= link_to 'Delete', article_path(article), method: :delete, data: { turbo_confirm: 'Are you sure?', "turbo-method": :delete }, class: "btn btn-outline-danger" %>
+      <% end %>
     </div>
     <div class="card-footer text-muted">
       2 days ago
