--- a/Section_6/alpha-blog/app/views/users/_users.html.erb
+++ b/Section_6/alpha-blog/app/views/users/_users.html.erb
@@ -10,7 +10,9 @@
       <%= gravatar_for user, size: 200 %>
       <p class="card-text"><%= pluralize(user.articles.count, "article") %></p>
       <%= link_to 'View profile', user_path(user), class: "btn btn-outline-success" %>
-      <%= link_to 'Edit', edit_user_path(user), class: "btn btn-outline-info" %>
+      <% if logged_in? && user == current_user %>
+        <%= link_to 'Edit', edit_user_path(user), class: "btn btn-outline-info" %>
+      <% end %>
     </div>
     <div class="card-footer text-muted">
       <small>Joined <%= time_ago_in_words(user.created_at) %> ago </small>
