--- a/Section_6/alpha-blog/app/views/layouts/_navbar.html.erb
+++ b/Section_6/alpha-blog/app/views/layouts/_navbar.html.erb
@@ -17,30 +17,49 @@
         <li class="nav-item">
           <%= link_to "Bloggers", users_path, class: "nav-link" %>
         </li>
-        <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle"
-            href="#"
-            id="navbarDropdown"
-            role="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
-            Options
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><%= link_to 'Create new article', new_article_path, class: 'dropdown-item'%></li>
-            <li><%= link_to 'View articles', articles_path, class: 'dropdown-item'%></li>
-            <li><hr class="dropdown-divider" /></li>
-            <li>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </li>
-          </ul>
-        </li>
-        <% if logged_in? %>
-          <li class="nav-item">
-            <%= link_to current_user.username, user_path(current_user), class: "nav-link" %>
+        
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="navbarDropdown"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              Options
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <% if logged_in? %>
+              <li><%= link_to 'Create new article', new_article_path, class: 'dropdown-item'%></li>
+            <% end %>
+              <li><%= link_to 'View articles', articles_path, class: 'dropdown-item'%></li>
+              <li><hr class="dropdown-divider" /></li>
+              <li>
+                <a class="dropdown-item" href="#">Something else here</a>
+              </li>
+            </ul>
           </li>
+        
+        <% if logged_in? %>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="navbarDropdown"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              <%= current_user.username%>
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><%= link_to 'Edit profile', edit_user_path(current_user), class: 'dropdown-item'%></li>
+              <li><%= link_to 'See profile', user_path(current_user), class: 'dropdown-item'%></li>
+            </ul>
+          </li>
+        <% end %>
+        <% if logged_in? %>
           <li class="nav-item">
             <%= link_to 'Logout', logout_path, class: 'nav-link', data: { turbo_confirm: 'Are you sure?', "turbo-method": :delete } %>
           </li>
