--- a/Section_6/alpha-blog/app/views/layouts/_navbar.html.erb
+++ b/Section_6/alpha-blog/app/views/layouts/_navbar.html.erb
@@ -51,7 +51,7 @@
               data-bs-toggle="dropdown"
               aria-expanded="false"
             >
-              <%= current_user.username%>
+              <%= '(Admin) ' if current_user.admin? %><%= current_user.username %>
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><%= link_to 'Edit profile', edit_user_path(current_user), class: 'dropdown-item'%></li>
