--- a/Section_6/alpha-blog/app/views/users/_users.html.erb
+++ b/Section_6/alpha-blog/app/views/users/_users.html.erb
@@ -10,8 +10,11 @@
       <%= gravatar_for user, size: 200 %>
       <p class="card-text"><%= pluralize(user.articles.count, "article") %></p>
       <%= link_to 'View profile', user_path(user), class: "btn btn-outline-success" %>
-      <% if logged_in? && user == current_user %>
+      <% if logged_in? && ( user == current_user || current_user.admin?) %>
         <%= link_to 'Edit', edit_user_path(user), class: "btn btn-outline-info" %>
+      <% end %>
+      <% if current_user.admin? %>
+        <%= link_to 'Delete user', user_path(user), data: { confirm: 'Are you sure?', "turbo-method": :delete }, class: "btn btn-outline-danger" %>
       <% end %>
     </div>
     <div class="card-footer text-muted">
