Add categories list, show, pagination, time creation and updated

--- a/Section_7/alpha-blog/app/views/categories/show.html.erb
+++ b/Section_7/alpha-blog/app/views/categories/show.html.erb
@@ -8,5 +8,5 @@
   </div>
 </div>
 <p class="text-center">
-  <%= link_to 'Return to articles listing', articles_path, class: "btn btn-primary"%>
+  <%= link_to 'Return to categories listing', categories_path, class: "btn btn-primary"%>
 </p>
