--- a/Section_7/alpha-blog/app/views/articles/_articles.html.erb
+++ b/Section_7/alpha-blog/app/views/articles/_articles.html.erb
@@ -17,7 +17,8 @@
       <% end %>
     </div>
     <div class="card-footer text-muted">
-      2 days ago
+      <small>Created <%= time_ago_in_words(article.created_at) %> ago, 
+        edited <%= time_ago_in_words(article.updated_at) %> ago</small>
     </div>
   </div>
 <% end %>
