--- a/Section_7/alpha-blog/app/views/articles/_form.html.erb
+++ b/Section_7/alpha-blog/app/views/articles/_form.html.erb
@@ -30,6 +30,17 @@
       </div>
     </div>
   </div>
+  <div class="mb-3">
+    <div class="row">
+      <div class="col-2">
+        <%= f.label :category, class: "form-label text-white" , for: "exampleFormControlInput1"%>
+      </div>
+      <div class="col-10">
+        <%= f.collection_select(:category_ids, Category.all, :id, :name,
+            { prompt: "Make your selection from the list below (can be empty)"}, { multiple: true, size: 3, class: "custom-select shadow rounded" }) %>
+      </div>
+    </div>
+  </div>
   <div class="mb-3 text-center">
     <%= f.submit class: "btn btn-outline-light" %>
   </div>
