--- a/Section_7/alpha-blog/app/views/articles/_articles.html.erb
+++ b/Section_7/alpha-blog/app/views/articles/_articles.html.erb
@@ -7,9 +7,11 @@
       Author: <%= link_to article.user.username, user_path(article.user) %>
     </div>
     <div class="card-body">
-      <!-- <h5 class="card-title"><%= article.title %></h5> -->
       <h5><%= link_to article.title, article_path(article), class: "card-title" %></h5>
       <p class="card-text"><%= article.description %></p>
+      <% if article.categories.any? %>
+        <div class="my-2"><%= render article.categories %></div>
+      <% end %>
       <%= link_to 'View', article_path(article), class: "btn btn-outline-success" %>
       <% if logged_in? && (article.user == current_user || current_user.admin?) %>
         <%= link_to 'Edit', edit_article_path(article), class: "btn btn-outline-info" %>
