--- a/Section_7/alpha-blog/app/views/articles/show.html.erb
+++ b/Section_7/alpha-blog/app/views/articles/show.html.erb
@@ -6,6 +6,9 @@
   <div class="card-body">
     <h5 class="card-title"><%= @article.title %></h5>
     <p class="card-text"><%= @article.description %></p>
+    <% if @article.categories.any? %>
+      <div class="my-2"><%= render @article.categories %></div>
+    <% end %>
     <% if logged_in? && (@article.user == current_user || current_user.admin?) %>
       <%= link_to 'Edit', edit_article_path(@article), class: "btn btn-outline-info" %>
       <%= link_to 'Delete', article_path(@article), method: :delete, data: { confirm: 'Are you sure?', "turbo-method": :delete }, class: "btn btn-outline-danger" %>
