--- a/Section_7/alpha-blog/app/views/categories/show.html.erb
+++ b/Section_7/alpha-blog/app/views/categories/show.html.erb
@@ -10,7 +10,7 @@
 
 <% if logged_in? && current_user.admin? %>
   <div class="text-center mt-4">
-    <%= link_to "Edit category name", edit_category_path(@category), class: "btn btn-outline-info" %>
+    <%= link_to "Edit category name", edit_category_path(@category), class: "btn btn-primary" %>
   </div>
 <% end %>
 
